--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,22 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
- /* body {
-  background-color: #000;
-  color: #fff;
-  font-family: 'Inter', sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.translate-z-0 {
+  transform: translateZ(0px);
+}
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
+  background-color: #f13024;
 }
 
-a {
-  color: #0070f3;
+.swiper-button-next:after,
+.swiper-button-prev:after,
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after {
+  color: #f13024;
 }
 
-.navbar {
-  background-color: #101010;
-  border-bottom: 1px solid #333;
+.h1 {
+ @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-semibold;
 }
-
-.card {
-  background-color: #202020;
-  border: 1px solid #333;
-}  */
